src/test/ui/traits/traits-multidispatch-bad.stderr
error[E0308]: mismatched types
  --> $DIR/traits-multidispatch-bad.rs:19:17
   |
LL |     test(22i32, 44i32); //~ ERROR mismatched types
   |                 ^^^^^ expected u32, found i32

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
